--- a/yeogiyo/yeogiyo/Base.lproj/Main.storyboard
+++ b/yeogiyo/yeogiyo/Base.lproj/Main.storyboard
@@ -17,20 +17,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="진행 중인 42 프로젝트를 검색하세요." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCV-kv-Px8">
-                                <rect key="frame" x="393" y="244" width="409" height="87"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="진행 중인 42 프로젝트를 검색하세요." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCV-kv-Px8">
+                                <rect key="frame" x="395" y="250.5" width="404" height="33.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jQi-h8-4cv">
-                                <rect key="frame" x="335" y="365" width="524" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="jQi-h8-4cv">
+                                <rect key="frame" x="335" y="314" width="524" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="524" id="LI1-cm-8Kh"/>
+                                </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4Kx-ao-62J">
-                                <rect key="frame" x="335" y="409" width="524" height="174"/>
+                                <rect key="frame" x="335" y="370" width="524" height="294"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -50,6 +51,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jQi-h8-4cv" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LLc-UZ-ptB"/>
+                            <constraint firstItem="RCV-kv-Px8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iro-pM-qi2"/>
+                            <constraint firstItem="RCV-kv-Px8" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-150" id="oQT-A5-Zkv"/>
+                            <constraint firstItem="jQi-h8-4cv" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-75" id="q9u-3G-fKi"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="7gt-Qc-Jki"/>
                     <connections>
@@ -69,9 +76,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1194" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QuZ-sk-Jwh">
-                                <rect key="frame" x="0.0" y="22" width="1194" height="50"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QuZ-sk-Jwh">
+                                <rect key="frame" x="0.0" y="20" width="1194" height="50"/>
                                 <color key="barTintColor" systemColor="systemBackgroundColor"/>
                                 <items>
                                     <navigationItem title="Title" id="E8Z-id-US2">
@@ -83,9 +89,8 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fzY-gn-8Z1">
-                                <rect key="frame" x="156" y="119" width="943" height="695"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fzY-gn-8Z1">
+                                <rect key="frame" x="50" y="80" width="1094" height="714"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cPL-yn-hTC">
                                     <size key="itemSize" width="128" height="128"/>
@@ -94,7 +99,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="vYd-yt-QmX" customClass="MyCollectionViewCell" customModule="cv_test" customModuleProvider="target">
+                                    <collectionViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="vYd-yt-QmX" customClass="MyCollectionViewCell" customModule="yeogiyo" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Yt3-Mp-2kZ">
@@ -114,14 +119,6 @@
                                             <outlet property="myLabel" destination="qHN-4d-Leq" id="ska-yD-wzf"/>
                                         </connections>
                                     </collectionViewCell>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ED5-MB-4UQ">
-                                        <rect key="frame" x="0.0" y="142" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wb8-SW-lTA">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
                                 </cells>
                                 <connections>
                                     <outlet property="dataSource" destination="gAA-OL-jZU" id="Csq-WG-m55"/>
@@ -131,6 +128,15 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="X9F-KM-2fA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="X9F-KM-2fA" firstAttribute="bottom" secondItem="fzY-gn-8Z1" secondAttribute="bottom" constant="20" id="N8F-kA-7q5"/>
+                            <constraint firstItem="QuZ-sk-Jwh" firstAttribute="leading" secondItem="X9F-KM-2fA" secondAttribute="leading" id="Nr2-jG-TIt"/>
+                            <constraint firstItem="X9F-KM-2fA" firstAttribute="trailing" secondItem="fzY-gn-8Z1" secondAttribute="trailing" constant="50" id="aNL-lP-Wyy"/>
+                            <constraint firstItem="QuZ-sk-Jwh" firstAttribute="trailing" secondItem="X9F-KM-2fA" secondAttribute="trailing" id="c7Q-jQ-Xul"/>
+                            <constraint firstItem="fzY-gn-8Z1" firstAttribute="leading" secondItem="X9F-KM-2fA" secondAttribute="leading" constant="50" id="fZe-tW-Di4"/>
+                            <constraint firstItem="QuZ-sk-Jwh" firstAttribute="top" secondItem="X9F-KM-2fA" secondAttribute="top" constant="20" id="oBy-gw-01I"/>
+                            <constraint firstItem="fzY-gn-8Z1" firstAttribute="top" secondItem="QuZ-sk-Jwh" secondAttribute="bottom" constant="10" id="zJt-w7-PF1"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="pageTitle" destination="E8Z-id-US2" id="7LC-c1-qBv"/>
